<resources>
    <string name="app_name">code</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_koin">Koin</string>
    <string name="menu_dagger">Dagger</string>
    <string name="menu_hilt">Hilt</string>
    <string name="sample_one_example">Sample One</string>
    <string name="constructor_injection">Constructor Injection</string>
    <string name="field_injection">Field Injection</string>
    <string name="method_injection">Method Injection</string>
    <string name="provides_annotation">Provides Annotation</string>
    <string name="binds_annotation">Binds Annotation</string>
    <string name="auto_mobile_example">Automobile Example</string>
    <string name="start_action">Start Action</string>
    <string name="dynamic_value_injection">Dynamic value Injection</string>
    <string name="singleton_scope">Singleton Scope</string>
    <string name="hiltConcepts">Hilt Concepts Selection</string>
    <string name="constructor_field_injection">Constructor Field Injection</string>
    <string name="qualifiers_demo">Qualifiers Demo</string>
    <string name="context_injection">Context Injection</string>
    <string name="context_demo">Context Demo</string>
    <string name="fragment_context">Fragment Context</string>
    <string name="application_context">Application Context</string>
    <string name="hilt_singletion_scope">Hilt Singletion Scope</string>
    <string name="hilt_activity_scope">Hilt Activity Scope</string>
    <string name="hilt_scoping">Hilt Scoping</string>
</resources>