<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_dagger_automobile"
    app:startDestination="@id/automobileFragment">
<fragment
    android:id="@+id/automobileFragment"
    android:name="com.demo.code.typesOfDi.dagger.automobile.selection.AutomobileFragment"
    android:label="@string/auto_mobile_example"
    tools:layout="@layout/automobile_fragment">
    <action
        android:id="@+id/action_automobileFragment_to_constructorInjectionFragment"
        app:destination="@id/constructorInjectionFragment" />
    <action
        android:id="@+id/action_automobileFragment_to_fieldInjectionFragment"
        app:destination="@id/fieldInjectionFragment" />
    <action
        android:id="@+id/action_automobileFragment_to_providesAnnotationFragment"
        app:destination="@id/providesAnnotationFragment" />
    <action
        android:id="@+id/action_automobileFragment_to_bindsAnnotationFragment"
        app:destination="@id/bindsAnnotationFragment" />
</fragment>
<fragment
    android:id="@+id/providesAnnotationFragment"
    android:name="com.demo.code.typesOfDi.dagger.automobile.concepts.providesAnnotation.view.ProvidesAnnotationFragment"
    android:label="@string/provides_annotation"
    tools:layout="@layout/provides_annotation_fragment" />
<fragment
    android:id="@+id/bindsAnnotationFragment"
    android:name="com.demo.code.typesOfDi.dagger.automobile.concepts.bindsAnnotaion.view.BindsAnnotationFragment"
    android:label="@string/binds_annotation"
    tools:layout="@layout/binds_annotation_fragment" />
<fragment
    android:id="@+id/fieldInjectionFragment"
    android:name="com.demo.code.typesOfDi.dagger.automobile.concepts.fieldInjection.view.FieldInjectionFragment"
    android:label="@string/field_injection"
    tools:layout="@layout/field_injection_fragment" />
<fragment
    android:id="@+id/constructorInjectionFragment"
    android:name="com.demo.code.typesOfDi.dagger.automobile.concepts.constructorInjection.view.ConstructorInjectionFragment"
    android:label="@string/constructor_injection"
    tools:layout="@layout/constructor_injection_fragment" />
</navigation>