<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dagger">

    <fragment
        android:id="@+id/nav_dagger"
        android:name="com.demo.code.typesOfDi.dagger.selection.DaggerSelectionFragment"
        android:label="@string/menu_dagger"
        tools:layout="@layout/fragment_dagger_selection" >
        <action
            android:id="@+id/action_nav_dagger_to_automobileFragment"
            app:destination="@id/nav_dagger_automobile" />
    </fragment>
    <fragment
        android:id="@+id/nav_koin"
        android:name="com.demo.code.typesOfDi.koin.KoinSelectionFragment"
        android:label="@string/menu_koin"
        tools:layout="@layout/fragment_koin_selection" />

    <fragment
        android:id="@+id/nav_hilt"
        android:name="com.demo.code.typesOfDi.hilt.HiltSelectionFragment"
        android:label="@string/menu_hilt"
        tools:layout="@layout/fragment_hilt_selection" />

    <include app:graph="@navigation/nav_dagger_automobile" />


</navigation>