<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demo.code.typesofdi.dagger.sampleone.selection.AutomobileFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/constructorInjectionId"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:text="@string/constructor_injection"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fieldInjectionId"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:text="@string/field_injection"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constructorInjectionId" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bindsAnnotationId"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:text="@string/binds_annotation"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fieldInjectionId" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dynamicValueInjectionId"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_value_injection"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bindsAnnotationId" />

</androidx.constraintlayout.widget.ConstraintLayout>