<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".typesofdi.dagger.selection.DaggerSelectionFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/constructor_injection_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/constructor_injection"
        android:layout_margin="@dimen/btn_spacing"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/field_injection_id"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_spacing"
        android:text="@string/field_injection"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constructor_injection_id" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/method_injection_id"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_spacing"
        android:text="@string/method_injection"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_injection_id" />

</androidx.constraintlayout.widget.ConstraintLayout>